Use correct module for coverage
We must use the same import path as the tests. Else the coverage is not measured correctly.
If you use 'src' the coverage is 0. Now it is 100%

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,6 @@ envlist = py3
 deps = -rrequirements-test.txt
 commands =
     # NOTE: you can run any command line tool here - not just tests
-    pytest --pylint --cov=src .
+    pytest --pylint --cov=module1 .
     coverage html
     mypy src tests
