--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,10 @@ commands =
     pytest --pylint --cov=module1 .
     coverage html
     mypy src tests
+
+[testenv:doc]
+description = invoke sphinx-build to build the HTML docs
+basepython = python3.7
+deps = sphinx >= 1.7.5, < 2
+commands = sphinx-build -d "{toxworkdir}/doc_doctree" doc/source "{toxworkdir}/doc_out" --color -W -bhtml {posargs}
+           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
