--- a/.pylintrc
+++ b/.pylintrc
@@ -15,7 +15,7 @@ ignore=CVS
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
 # https://github.com/carsongee/pytest-pylint/issues/137
-# ignore-patterns=
+ignore-patterns=doc
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
